tests/error/const_type_mismatch_negated.vow
// TEST: error-code TypeMismatch
// TEST: build-json x['span']['length'] > 0
module ConstTypeMismatchNegated

const BAD: bool = -42;
